--- a/manifest.json
+++ b/manifest.json
@@ -1,51 +1,18 @@
 {
     "manifest_version": 3,
-    "name": "My Extension",
-    "description": "My Extension's description",
-    "version": "1.0",
-    "background": {
-        "service_worker": "scripts/background.js",
-        "type": "module"
-    },
-    "action": {
-        "default_title": "My Extension settings",
-        "default_popup": "popup/popup.html",
-        "default_icon": "images/icon.png"
-    },
+    "name": "TinyMOD",
+    "description": "External modifications to TinyMCE instances in your browser",
+    "version": "0.1",
     "content_scripts": [
-        {
-            "matches": [
-                "https://*/*"
-            ],
-            "js": [
-                "scripts/content.js"
-            ],
-            "run_at": "document_end"
-        },
-        {
-            "matches": [
-                "https://*/*"
-            ],
-            "js": [
-                "scripts/main.js"
-            ],
-            "run_at": "document_end",
-            "world": "MAIN"
-        }
-    ],
-    "web_accessible_resources": [
         {
             "matches": [
                 "<all_urls>"
             ],
-            "resources": [
-                "/modules/helpers.js"
-            ]
+            "js": [
+                "scripts/content.js"
+            ],
+            "run_at": "document_end",
+            "world": "MAIN"
         }
-    ],
-    "permissions": [
-        "contextMenus",
-        "activeTab",
-        "storage"
     ]
 }
